# AI-Assisted-Workflow-Builder

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  health.py  instances.py  organizations.py  tasks.py  workflows.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/db/: mongo.py
backend/app/domain/auth/: repository.py  service.py
backend/app/domain/instances/: repository.py  service.py
backend/app/domain/orgs/: repository.py  service.py
backend/app/domain/scheduling/: repository.py  service.py
backend/app/domain/tasks/: repository.py  service.py
backend/app/domain/workflows/: ai.py  repository.py  service.py  validation.py
backend/app/engine/: conditions.py  runner.py
backend/app/engine/handlers/: __init__.py  base.py  condition.py  end.py  start.py
backend/app/models/: instance.py  organization.py  scheduled_job.py  task.py  user.py  workflow.py
backend/app/schemas/: auth.py  instance.py  organization.py  task.py  workflow.py
backend/app/workers/: scheduler.py
backend/tests/: fakes.py  test_auth.py  test_health.py  test_instances.py  test_organizations.py  test_rate_limit.py  test_scheduling.py  test_tasks.py  test_workflows.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx
scripts/: run-api.ps1  run-scheduler-once.ps1  test-backend.ps1
(+25 files in other folders)
