[project]
name = "workflow-builder-backend"
version = "0.1.0"
description = "FastAPI backend for the AI-assisted workflow builder."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "motor>=3.6.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.1.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

